Pricing page updates

--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -153,6 +153,7 @@ $color_light:            $gray-10; //hsl(204, 29%, 77%);
 $color_light-alt:        $gray-12; //hsl(204, 18%, 94%);
 $color_border:           lighten(#B3C8D6, 10%);
 $color_green:            hsl(150, 85%, 39%); // hsl(160, 100%, 34%);
+$color_red:              $color_service;
 $color_shadow:           #DCE4E9;
 $color_highlight-yellow: #FEDB45;
 // named color lists
