New gradient mixin & class - .color--grad-blue-waves, similar to SVG background for fallback.

--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -353,6 +353,9 @@
         &--tint {
             @include color--tint;
         }
+        &--grad-blue-waves {
+            @include color--grad-blue-waves;
+        }
     }
     // generic container padding classes
     &-pad {
