--- a/source/assets/scss/mixins/colors.scss
+++ b/source/assets/scss/mixins/colors.scss
@@ -60,6 +60,13 @@
         @include gradient(-135deg, #2B2D45 0%, #1E2127 52%, #1E2127 100%);
     }
 }
+@mixin color--grad-blue-waves {
+    $c-light: hsl(211, 66%, 35%);
+    $c-dark:  hsl(211, 66%, 20%);
+    color: $color_white;
+    @include gradient(55deg, $c-light 3%, $c-dark 27%, $c-light 27%, $c-dark 85%, $c-light 100%);
+}
+
 @mixin noisy {
     // color: $color_white;
     position: relative;
