hotfix for center-aligned person-titles on leadership page. Can't do it globally with margin: autos either.

--- a/source/assets/scss/modules/people.scss
+++ b/source/assets/scss/modules/people.scss
@@ -90,7 +90,7 @@ blockquote + .media-object, .blockquote-info { // line person/info up with quote
         font-size: 90%;
         font-style: italic;
         display: table; // collapses width
-        max-width: 18em;
+        // max-width: 18em; // max-width caused some layout ish 
     }
     &-role {
         display: table; // collapses width
