--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -104,7 +104,7 @@ section#compliance-other.section-article
       markdown:
         The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
 
-        Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.
+        Are you ready? Datica applies the rules of GDPR and GXP and will be able to prove full compliance once our audit is complete in May 2018.
 
         [Learn more about GDPR](/discover/#{data.site.discover['6yNMzCKn84Q4qIsm0sWmUy'].slug}).
   .row.align-center
