--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -41,7 +41,7 @@ section.section-article
       h2.headline-3 <strong>Healthcare's best compliance coverage</strong> <br>for teams large and small
       .logo-cloud.group
         - data.views.home.badges.each do |logo|
-          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="#{logo["fileUrl"]}?w=300" /
+          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") data-interchange="[#{logo["fileUrl"]}?w=128, small], [#{logo["fileUrl"]}?w=256, medium]" /
       = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/platform/compliance", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
   hr.divider /
   .row.align-center
@@ -75,22 +75,22 @@ section.section-article
 section.container-gray-10.section-article
   h3.headline-3.group.text-center <strong>Recently</strong> at Datica
   .row.full-width.row--card-grid.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
-    .column
-      .card
-        .card-section
-          .subheader-small.text-right
-            = inline_svg("small/icon-event-note", class: "icon-inline svg-color--gray-5")
-            |  Mar. 5 – Mar. 9, 2018
-          p
-            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
-              img class="logo-size--medium" src="//images.ctfassets.net/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
-          p
-            | Datica will have an exciting announcement for our platform at HIMSS this year. 
-            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077 
-            | to hear the news. 
-        a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
-          img src="https://images.ctfassets.net/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
-    - sorted_posts.take(1).each do | id, blog_entry |
+    / .column
+    /   .card
+    /     .card-section
+    /       .subheader-small.text-right
+    /         = inline_svg("small/icon-event-note", class: "icon-inline svg-color--gray-5")
+    /         |  Mar. 5 – Mar. 9, 2018
+    /       p
+    /         a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
+    /           img class="logo-size--medium" src="//images.ctfassets.net/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
+    /       p
+    /         | Datica will have an exciting announcement for our platform at HIMSS this year. 
+    /         a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077 
+    /         | to hear the news. 
+    /     a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
+    /       img src="https://images.ctfassets.net/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
+    - sorted_posts.take(2).each do | id, blog_entry |
       .column
         = partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true }
     - sorted_podcasts.take(1).each do | id, podcast_entry |
@@ -108,7 +108,7 @@ section.container-gray-10.section-article
                 = report_entry.title
           - if report_entry.has_key?("image_thumb")
             a.text-center href="/innovation/#{report_entry.slug}" title=("Read report")
-              img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
+              img alt="report" data-interchange="[#{report_entry.image_thumb.url}?fit=thumb&w=600&q=50, small], [#{report_entry.image_thumb.url}?fit=thumb&w=800, large]" style="padding: 0 1rem 0 1rem;" /
 
 aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
