--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -23,11 +23,11 @@
             </ul>
             <hr class="content">
             <ul class="list-horiz">
-                <li><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=200" alt="HITRUST Certified" />&nbsp;
+                <li><img class="logo-size--large" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=200, small]" alt="HITRUST Certified" />&nbsp;
                 </li>
-                <li><img class="logo-size--large img-crisp" src="https://images.ctfassets.net/189dvqdsjh46/1Tt54MVMgkqIW8OWaYKmoo/7cb2c9e5e3d4f54cbd7498cc7e001fec/logo-aicpa.png?w=120" alt="AICPA/SOC2 badge" />&nbsp;
+                <li><img class="logo-size--large img-crisp" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/1Tt54MVMgkqIW8OWaYKmoo/7cb2c9e5e3d4f54cbd7498cc7e001fec/logo-aicpa.png?w=120, small]" alt="AICPA/SOC2 badge" />&nbsp;
                 </li>
-                <li><script type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script>
+                <li><script defer type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script>
                 </li>
             </ul>
         </div>
