New video poster image instead of embed (speed!); re-ordered bands.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -34,7 +34,6 @@ collectionName: "home"
               a(href="/contact" title="Let's talk.") Talk with a customer representative. 
               = inline_svg("hubspot-chat-blue", class: "icon-inline svg-color--gray-6")
 .strip-bright
-= partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
   .row.align-center.text-center
     .columns.small-12.large-11
@@ -43,7 +42,9 @@ section.section-article
         - data.views.home.badges.each do |logo|
           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") data-interchange="[#{logo["fileUrl"]}?w=128, small], [#{logo["fileUrl"]}?w=256, medium]" /
       = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/platform/compliance", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
-  hr.divider /
+
+= partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
+section.section-article
   .row.align-center
     .columns.small-12.large-11.text-center
       h3.headline-3 <strong>World-class companies</strong> trust Datica
