--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -17,11 +17,13 @@ end
     <h3 class="headline-3 group text-center">Build <strong>Breakthrough</strong> Compliant Apps</h3>
     <div class="row">
         <div class="columns small-12 medium-6">
-            <div class="responsive-embed widescreen"><iframe width="560" height="315" src="https://www.youtube.com/embed/oju3cVT5YBo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
-            <%= 
+            <a href="/blog/how-a-major-health-system-got-onto-aws-recapping-the-featured-session-today" title="Watch the session at AWS Re:Invent 2018">
+                <img class="group--sm" alt="How Methodist Le Bonheur Healthcare's Focus on Standardizing Compliant Ops led to Breakthrough Apps" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/h5Hb4o4fGS8U2ugmAkIIO/2a116a69e81b426e024d1ea642f8073f/aws-mlh-video-poster.jpg?w=700&q=45, small], [https://images.ctfassets.net/189dvqdsjh46/h5Hb4o4fGS8U2ugmAkIIO/2a116a69e81b426e024d1ea642f8073f/aws-mlh-video-poster.jpg?w=1000, large]" />
+            </a>
+            <%#= 
             partial "partials/snippets/button", 
                 :locals => {
-                    :label => "Read the blog post", 
+                    :label => "Read how MLH got on to AWS", 
                     :title => "Read more", 
                     :url => "/blog/how-a-major-health-system-got-onto-aws-recapping-the-featured-session-today", 
                     # :rel => "external", 
