--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -126,3 +126,5 @@ end
         // $('#article-toc').addClass('group');
     });
 </script>
+
+<script async src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autorun=true&skin=desert"></script>
