--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -369,7 +369,7 @@ $paragraph-text-rendering: optimizeLegibility;
 $code-color: inherit;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: transparentize($color_yellow-glow, 0.9);//hsla(219, 100%, 52%, 0.2);
+$code-background: initial; //transparentize($gray-5, 0.5);//hsla(219, 100%, 52%, 0.2);
 $code-border: none; //1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
