Updated Services share image with custom one

--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3sLvuskfFmYoAieKyCG644/d0b35a015189bad32c0ebc12053129e0/services-share.jpg"
 customCSS: "platform"
 layout: basic
 priority: "0.9"
