--- a/source/contentful_templates/guide.html.erb
+++ b/source/contentful_templates/guide.html.erb
@@ -77,11 +77,8 @@ end
             <div class="callout callout--large drop">
                 <% if p.has_key?("related_form") %>
                     <%= stylesheet_link_tag "views/forms-inline.css" %>
-                    <h3 class="headline-4 text-center group"><%= p.title %></h3>
+                    <h3 class="headline-4 text-center group">Get Your <%= p.related_form.title %></h3>
                     <%= p.related_form.custom_form %>
-                <% elsif p.has_key?("form_id") %>
-                    <h3 class="headline-4 text-center group">Get your copy of the guide</h3>
-                    <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => p["form_id"] }) %>
                 <% end %>
             </div>
         </div>
