Building a mobile-first landing page from scratch, mostly

--- a/source/assets/scss/modules/buttons.scss
+++ b/source/assets/scss/modules/buttons.scss
@@ -135,6 +135,9 @@
             @include button-expand(false);
         }
     }
+    // &.success { // $color_green is a bit dark
+    //     color: white;
+    // }
     // &.icon-inline { // target svg icon
 
     // }
