--- a/source/assets/scss/views/forms-inline.scss
+++ b/source/assets/scss/views/forms-inline.scss
@@ -1,6 +1,10 @@
 // for embedded forms where we don't control the markup
+@charset 'utf-8';
+@import '../settings';
+@import '../mixins/functions';
+
 .hs-button {
-	background-color: #1055ff;
+	background-color: $color_green;
 	color: white;
 	font-weight: bold;
 	padding: 11px 18px;
