--- a/source/assets/scss/views/forms-inline.scss
+++ b/source/assets/scss/views/forms-inline.scss
@@ -4,7 +4,7 @@
 @import '../mixins/functions';
 
 .hs-button {
-	background-color: $color_green;
+	background-color: $success_color;
 	color: white;
 	font-weight: bold;
 	padding: 11px 18px;
