--- a/source/assets/scss/views/guide.scss
+++ b/source/assets/scss/views/guide.scss
@@ -6,13 +6,13 @@ article.content-dynamic {
     font-size: larger;
 }
 .form-embed {
-    // @include breakpoint(medium) {
-    //     margin-top: -4rem;
-    // }
     @include breakpoint(large) {
+        margin-top: -4.5rem;
+    }
+    @include breakpoint(xlarge) {
         margin-top: -7rem;
     }
 }
-.product-thumb {
+// .product-thumb {
 
-}
+// }
